<resources>
    <string name="app_name">Погода</string>
    <string name="cityHeader">Список городов</string>
    <string name="applyButton">Применить</string>
    <string name="cityInput">Введите город</string>
    <string name="settingsHeader">Настройки</string>
    <string name="humidityCheckbox">Влажность</string>
    <string name="windSpeedCheckbox">Скорость ветра</string>
    <string name="pressureCheckbox">Давление</string>
    <string name="enterTheCity">Введите город</string>
    <string name="cities_btn_text">Города</string>
    <string name="apply_settings">Применить настройки</string>
    <string name="enter_temperature">Введите температуру</string>
    <string name="settings_icon">⋮</string>
    <string name="temperature_settings_input">Температура</string>
    <string name="dark_theme">Темная тема</string>
    <string name="home_screen">Текущая погода</string>
    <string name="settings_screen">Настройки</string>
    <string name="info_screen">Разработчики</string>
    <string name="developers_text">Версия приложения Погода 1.0\nCopyright @ Vadim Nikitenko 2020.\nВсе права защищены</string>
    <string name="wind_speed_city_details">Скорость ветра:</string>
    <string name="pressure_city_details">Давление:</string>
    <string name="humidity_city_details">Влажность:</string>
    <string name="error_message">Нам не удалось найти информацию</string>
    <string name="add_city">Добавить город</string>
    <string name="city_input_hint">Введите название города</string>
    <string name="add_city_title">Город</string>
    <string name="snackbar_delete_city">Удалить город?</string>
    <string name="apply_delete">Удалить</string>
    <string name="snackbar_enter_city_name">Введите название города</string>
    <string name="snackbar_sity_already_added">Город уже добавлен</string>
    <string name="udpated_at_text">Обновлено в&#160;</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="try_later">Попробуйте позже либо выберите другой город</string>
    <string name="ok">Ok</string>
    <string name="humidity_view_header">Комфорт</string>
    <string name="water_image">Water image</string>
    <string name="wind_view_header">Ветер</string>
    <string name="pressure_and_cloudy">Давление и облачность</string>
    <string name="continue_action">Продолжить</string>
    <string name="geo_msg">Чтобы показывать точный прогноз, приложению нужно знать, где вы находитесь</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="history">История запросов</string>
    <string name="sort">Сортировка:</string>
    <string name="map">Карта</string>
    <string name="logout">Выйти</string>
    <string name="current_place">Текущее место</string>
    <string name="weather_state">Статус погоды</string>
    <string name="delete_from_favorite">Удалить из избранного</string>
    <string name="add_to_favorite">Add to favorite</string>
</resources>
